Add Login, about, and shop pages with styling and images

--- a/home.css
+++ b/home.css
@@ -216,6 +216,7 @@ body, html {
 .icon-btn {
   background: linear-gradient(135deg, #ff4e50, #f00000); /* Red gradient */
   border: none;
+  margin: 0 1rem;
   padding: 15px;
   border-radius: 50%;
   cursor: pointer;
@@ -300,4 +301,8 @@ body, html {
 
 #aboutContainer{
   margin-top: 5rem;
+}
+
+#specialOfferText{
+  font-size: 3.3rem;
 }
